<resources>
    <string name="app_name">Penn Mobile</string>
    <string name="main_title">Penn Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="registrar">Courses</string>
    <string name="dining">Dining</string>
    <string name="gsr">GSR Booking</string>
    <string name="news">News</string>
    <string name="laundry">Laundry</string>
    <string name="support">Campus Help</string>
    <string name="about">About</string>
    <string name="fitness">Fitness</string>
    <string name="labs_icon">Penn Labs</string>
    <string name="no_results">No results found</string>
    <string name="action_licenses">Open Source Licenses</string>
    <string name="more">More</string>
    <string name="add_contact">Add contact</string>
    <string name="save_contacts">Select Contacts to Save</string>
    <string name="ask_contacts_fail">Access to your contacts is required to use this feature.</string>
    <string name="home">Home</string>
    <string name="accessibility_description">Screen menu</string>
    <string name="accessibility_item_description">%1$s menu item</string>
    <string name="fitness_room_open">Open</string>
    <string name="fitness_room_closed">Closed</string>
    <string name="dining_hall_open">Open</string>
    <string name="dining_hall_closed">Closed</string>
    <string name="dining_hall_breakfast">Breakfast</string>
    <string name="dining_hall_brunch">Brunch</string>
    <string name="dining_hall_lunch">Lunch</string>
    <string name="dining_hall_dinner">Dinner</string>
    <string name="dining_hall_late_night">Late Night</string>
    <string name="dining_info">Dining Hall Hours</string>
    <string name="menu_arg_name">name</string>
    <string name="menu_arg_meal">meal</string>
    <string name="menu_arg_stations">stations</string>
    <string name="sort_by_name">Order by Name</string>
    <string name="sort_by_residential">Order by Residential Hall</string>
    <string name="sort_by_open">Order by Open Status</string>
    <string name="dining_closed">Closed today</string>
    <string name="dining_balance">Dining Balance</string>
    <string name="dining_dollars">Dining Dollars</string>
    <string name="dining_swipes">Swipes</string>
    <string name="dining_guest_swipes">Guest Swipes</string>
    <string name="money">$</string>
    <string name="average_dining_dollars_spent">Average Dining Dollars Spent</string>
    <string name="past_week">this past week</string>
    <string name="dining_dollars_predictions">Dining Dollars Predictions</string>
    <string name="dining_swipes_predictions">Swipes Predictions</string>
    <string name="campus_express_token">Campus Express Token</string>
    <string name="campus_token_expires_in">Campus Express Token Expires In</string>
    <string name="extra_balance">Extra Balance</string>
    <string name="out_of_dining_dollars">Out of Dollars</string>
    <string name="out_of_dining_dollars_message">You have no dining dollars left for this semester.</string>
    <string name="out_of_dining_dollars_prediction_message">Based on your current balance and past behavior, we project you\'ll run out on this date.</string>
    <string name="extra_dining_dollars_message">Based on your past behavior, we project you\'ll end the semester with dining dollars to spare.</string>
    <string name="out_of_dining_swipes">Out of Swipes</string>
    <string name="out_of_dining_swipes_message">You have no swipes left for this semester.</string>
    <string name="out_of_dining_swipes_prediction_message">Based on your current balance and past behavior, we project you\'ll run out on this date.</string>
    <string name="extra_dining_swipes_message">Based on your past behavior, we project you\'ll end the semester with swipes to spare.</string>
    <string name="dining_graph_point">Date Filler Text \n Swipes Filler Text</string>
    <string name="laundry_washer">Washers</string>
    <string name="laundry_dryer">Dryers</string>
    <string name="laundry_summary">Summary</string>
    <string name="laundry_available">Available</string>
    <string name="laundry_availablein">left</string>
    <string name="laundry_washer_textview">Washer</string>
    <string name="laundry_dryer_textview">Dryer</string>
    <string name="laundry_notification_alarm_intent">From alarm</string>
    <string name="laundry_notification_snackbar_on">Notification turned on for </string>
    <string name="laundry_notification_snackbar_off">Notification turned off for </string>
    <string name="laundry_switch">Activate switch for notification when complete</string>
    <string name="laundry_undo">UNDO</string>
    <string name="laundry_hall_no">hall_no</string>
    <string name="laundry_position">position</string>
    <string name="laundry_machine_intent">machines</string>
    <string name="laundry_hall_arg">Laundry Hall</string>
    <string name="laundry_not_update">not updating status</string>
    <string name="laundry_status_unavailable">status unavailable</string>
    <string name="favorite_title">Favorite</string>
    <string name="laundry_settings">Laundry Settings</string>
    <string name="not_updating_status"></string>
    <string name="laundry_reset">RESET</string>
    <string name="laundry_help_text">Please click the settings icon to choose laundry rooms</string>
    <string name="laundry_settings_help1">Please select up to 3 laundry rooms</string>
    <string name="laundry_settings_help2">Click RESET to reset your selections</string>
    <string name="laundry_machines_available">machines available</string>
    <string name="washer">washer</string>
    <string name="dryer">dryer</string>
    <string name="open"></string>
    <string name="not_available">not available</string>
    <string name="min_left">min left</string>
    <string name="num_rooms_selected_pref">numRoomsSelected</string>
    <string name="num_rooms_pref">numRooms</string>
    <string name="location">location</string>
    <string name="available">available</string>
    <string name="s">s</string>
    <string name="machines">machines</string>
    <string name="laundry_machine_type">machineType</string>
    <string name="status_out_of_order">Out of order</string>
    <string name="status_not_online">Not online</string>
    <string name="status_available">Available</string>
    <string name="status_ready_to_start">Ready to start</string>
    <string name="status_end_of_cycle">End of cycle</string>
    <string name="laundry_room_name">roomName</string>
    <string name="laundry_machine_id">id</string>
    <string name="open_browser">Open in Browser</string>
    <string name="news_sharing">Share link</string>
    <string name="licenses">LICENSES</string>
    <string name="hi_we_are_labs">
    Hi, we\'re Penn Labs: a team of student software engineers, product designers, and business developers.
    </string>
    <string name="labs_mission">
    Penn Labs empowers others to make connections: connections to resources, connections to people,
        and connections to the greater Penn community.\n\nOur ultimate goal is improving the Penn community.
        We aim to do so not only by creating high quality products, but also by giving back to the community
        with educational resources and technical support.</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="feedback">FEEDBACK</string>
    <string name="feedback_txt">Click below to give us feedback!</string>
    <string name="request_feature">REQUEST A FEATURE</string>
    <string name="our_team">Our Team</string>
    <string name="alumni">Alumni (2020-2023) </string>
    <string name="penn_labs_copyright">\u00A9 2023 Penn Labs</string>
    <string name="pref_courses_title">Courses</string>
    <string name="pref_recitations">Show recitations</string>
    <string name="pref_recitations_summ">Display recitations in search results</string>
    <string name="pref_dining_title">Dining</string>
    <string name="pref_vegetarian">Show only vegetarian items</string>
    <string name="pref_vegetarian_summ">Display only vegetarian food items in the dining menus</string>
    <string name="pref_vegan">Show only vegan items</string>
    <string name="pref_vegan_summ">Display only vegan food items in the dining menus</string>
    <string name="home_screen_pref">home_screen_pref</string>
    <string name="search_GSRs">Search GSRs</string>
    <string name="quit_book">&lt;- Back</string>
    <string name="to">to</string>
    <string name="search_date">Date</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="any">Any</string>
    <string name="date">Date</string>
    <string name="huntsmanGSR_SessionID">HuntsmanGSR_SessionID</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="gsr_location">Location</string>
    <string name="no_gsr_reservations">No upcoming GSR reservations</string>
    <string name="no_gsr_rooms">No GSRs available</string>
    <string name="spring_fling">Spring Fling</string>
    <string name="fling_event_time">%1$s - %2$s</string>
    <string name="spec_spring_fling_2019_raffle">SPEC Spring Fling 2019 Raffle</string>
    <string name="first_open_pref">first_open</string>
    <string name="no_home_items_message">No items selected, click on settings in the top right of the screen to change this</string>
    <string name="pennkey_login">LOG IN WITH PENNKEY</string>
    <string name="guest_login">CONTINUE AS GUEST</string>
    <string name="login_sessionID">loginSessionID</string>
    <string name="access_token">accessToken</string>
    <string name="refresh_token">refreshToken</string>
    <string name="expires_in">expiresIn</string>
    <string name="token_expires_at">tokenExpiresAt</string>
    <string name="penn_user">pennUser</string>
    <string name="penn_password">pennPassword</string>
    <string name="title_activity_login">Sign in</string>
    <string name="pennkey">pennkey</string>
    <string name="accountID">"Account ID"</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="guest_mode">"Guest"</string>
    <string name="floating_bottom_bar_home">Home</string>
    <string name="floating_bottom_bar_pca">PCA</string>
    <string name="floating_bottom_bar_dining">Dining</string>
    <string name="floating_bottom_bar_gsr_booking">GSR</string>
    <string name="floating_bottom_bar_laundry">Laundry</string>
    <string name="floating_bottom_bar_more">More</string>
    <string name="initials">Initials</string>
    <string name="internet_error">Not Connected to the Internet</string>
    <string name="penn_mobile">Penn Mobile</string>
    <string name="contacts">Contacts</string>
    <string name="save_selection">Click to save selection</string>
    <string name="laundry_alarm_off">Alarm Cancelled.</string>
    <string name="pca_description">Get alerted when a course opens up!</string>
    <string name="pca_title">Penn Course Alert</string>
    <string name="pca_course">Course</string>
    <string name="pca_phone_number">Phone Number</string>
    <string name="pca_submit_button">Alert Me!</string>
    <string name="pca_notify_when_closed">Notify when closed?</string>
    <string name="new_listing">New Listing</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_photos">Add Photos</string>
</resources>