<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home"/>

        <item
            android:id="@+id/nav_registrar"
            android:icon="@drawable/ic_book"
            android:title="@string/registrar"/>

        <item
            android:id="@+id/nav_gsr"
            android:icon="@drawable/ic_gsr_black"
            android:title="@string/gsr"/>

        <item
            android:id="@+id/nav_dining"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/dining"/>

        <item
            android:id="@+id/nav_laundry"
            android:icon="@drawable/ic_local_laundry_service"
            android:title="@string/laundry"/>

        <item
            android:id="@+id/nav_fitness"
            android:icon="@drawable/ic_fitness_black"
            android:title="@string/fitness" />

        <!--<item-->
            <!--android:id="@+id/nav_map"-->
            <!--android:icon="@drawable/ic_map"-->
            <!--android:title="@string/map"/>-->

        <item
            android:id="@+id/nav_directory"
            android:icon="@drawable/ic_contacts"
            android:title="@string/directory"/>

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_announcement"
            android:title="@string/news"/>

        <item
            android:id="@+id/nav_fling"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/spring_fling"/>

        <!--<item-->
            <!--android:id="@+id/nav_nso"-->
            <!--android:icon="@drawable/ic_event_black_24dp"-->
            <!--android:title="@string/nso"/>-->

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_face_unlock_black_24dp"
            android:title="@string/support"/>

        <item
            android:id="@+id/nav_pref"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_bottom_nav_info_blue"
            android:title="@string/about"/>
    </group>
</menu>