<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pennapps.labs.pennmobile.LaundrySettingsActivity">

    <include layout="@layout/no_results" />

    <include layout="@layout/loading_panel" />

    <RelativeLayout
        android:id="@+id/laundry_settings_help_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/laundry_settings_help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laundry_settings_help1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/laundry_settings_help_text"
            android:text="@string/laundry_settings_help2" />

        <Button
            android:id="@+id/laundry_room_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/laundry_reset" />

    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/laundry_settings_swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ExpandableListView
            android:id="@+id/laundry_building_expandable_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:groupIndicator="@null" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>
